[project]
name = "jpypemm"
version = "0.1.0"
description = "Launch ImageJ + Micro-Manager 2.0 in-process from Python via JPype"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ipython>=9.14.1",
    "jpype1>=1.7.1",
    "ndv[qt]>=0.5.0",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
# start_mm.py lives at the project root (not a package), so put the root on
# sys.path for imports during tests.
pythonpath = ["."]
testpaths = ["tests"]
